finished work section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <!-- Home -->
+	<!-- Home -->
     <section id="home">
 
         <div id="home-cover" class="bg-parallax animated fadeIn">
@@ -35,7 +35,7 @@
                 <div id="home-content-box-inner">
 
                     <div id="home-heading" class="animated zoomIn">
-                        <h3>Watch Out <br> The Modern Responsive Website!</h3>
+                    	<h3>Watch Out <br> The Modern Responsive Website!</h3>
                     </div>
 
                     <div id="home-btn" class="animated zoomIn">
@@ -49,121 +49,121 @@
     <!-- Services -->
     <section id="services">
 
-        <div class="content-box">
+    	<div class="content-box">
 
-            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                <h3>Services</h3>
-                <div class="content-title-underline "></div>
-            </div>
+    		<div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s"">
+    			<h3>Services</h3>
+    			<div class="content-title-underline"></div>
+    		</div>
 
-            <div class="container ">
-                <div class="row ">
-                    <div class="col-md-4 ">
-                        <div class="service-item ">
-                            <div class="service-item-icon ">
-                                <i class="fas fa-paint-brush fa-3x "></i>
-                            </div>
-                            <div class="service-item-title ">
-                                <h3>Web Design</h3>
-                            </div>
-                            <div class="service-item-desc ">
-                                <p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 ">
-                        <div class="service-item ">
-                            <div class="service-item-icon ">
-                                <i class="fas fa-laptop fa-3x "></i>
-                            </div>
-                            <div class="service-item-title ">
-                                <h3>Web Development</h3>
-                            </div>
-                            <div class="service-item-desc ">
-                                <p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 ">
-                        <div class="service-item ">
-                            <div class="service-item-icon ">
-                                <i class="fas fa-tablet fa-3x "></i>
-                            </div>
-                            <div class="service-item-title ">
-                                <h3>Mobile Apps</h3>
-                            </div>
-                            <div class="service-item-desc ">
-                                <p>Sint mollit aliquip excepteur do dolor eiusmod deserunt mollit labore reprehenderit proident in magna quis ea irure aliqua est veniam nostrud tempor quis reprehenderit sunt sit dolore aliquip ut amet sint dolor eu tempor.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 ">
-                        <div class="service-item ">
-                            <div class="service-item-icon ">
-                                <i class="fas fa-search fa-3x "></i>
-                            </div>
-                            <div class="service-item-title ">
-                                <h3>SEO Optimization</h3>
-                            </div>
-                            <div class="service-item-desc ">
-                                <p>Esse ea ea sint in dolor nulla qui do pariatur eu proident tempor ad officia irure dolore officia eiusmod reprehenderit est nulla laborum commodo velit ex labore occaecat dolor duis mollit nisi cillum.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 ">
-                        <div class="service-item ">
-                            <div class="service-item-icon ">
-                                <i class="far fa-edit fa-3x "></i>
-                            </div>
-                            <div class="service-item-title ">
-                                <h3>UX Design</h3>
-                            </div>
-                            <div class="service-item-desc ">
-                                <p>Dolor exercitation ut tempor cillum proident ut magna mollit fugiat enim sit mollit deserunt sed enim excepteur ea est laborum incididunt adipisicing duis id sunt consequat eu occaecat.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 ">
-                        <div class="service-item ">
-                            <div class="service-item-icon ">
-                                <i class="far fa-life-ring fa-3x "></i>
-                            </div>
-                            <div class="service-item-title ">
-                                <h3>Support</h3>
-                            </div>
-                            <div class="service-item-desc ">
-                                <p>Ea cupidatat quis veniam duis minim ullamco reprehenderit velit ut ullamco fugiat commodo dolore commodo voluptate irure non cupidatat nostrud irure sunt qui mollit cupidatat labore anim mollit minim in ut occaecat reprehenderit labore.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    		<div class="container">
+    			<div class="row">
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-paint-brush fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Web Design</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-laptop fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Web Development</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>	
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-tablet fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Mobile Apps</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Sint mollit aliquip excepteur do dolor eiusmod deserunt mollit labore reprehenderit proident in magna quis ea irure aliqua est veniam nostrud tempor quis reprehenderit sunt sit dolore aliquip ut amet sint dolor eu tempor.</p>
+    						</div>
+    					</div>
+    				</div>
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-search fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>SEO Optimization</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Esse ea ea sint in dolor nulla qui do pariatur eu proident tempor ad officia irure dolore officia eiusmod reprehenderit est nulla laborum commodo velit ex labore occaecat dolor duis mollit nisi cillum.</p>
+    						</div>
+    					</div>
+    				</div>
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="far fa-edit fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>UX Design</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Dolor exercitation ut tempor cillum proident ut magna mollit fugiat enim sit mollit deserunt sed enim excepteur ea est laborum incididunt adipisicing duis id sunt consequat eu occaecat.</p>
+    						</div>
+    					</div>
+    				</div>	
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="far fa-life-ring fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Support</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Ea cupidatat quis veniam duis minim ullamco reprehenderit velit ut ullamco fugiat commodo dolore commodo voluptate irure non cupidatat nostrud irure sunt qui mollit cupidatat labore anim mollit minim in ut occaecat reprehenderit labore.</p>
+    						</div>
+    					</div>
+    				</div>			
+    			</div>	
+    		</div>	
+    	</div>
     </section>
-
+    
     <!-- About -->
-    <section id="about ">
+    <section id="about">
         <!-- About right side with diagonal BG parallax -->
-        <div id="about-bg-diagonal " class="bg-parallax "></div>
+        <div id="about-bg-diagonal" class="bg-parallax"></div>
 
         <!-- About left side with content -->
-        <div class="container ">
-            <div class="row ">
-                <div class="col-md-4 ">
-                    <div id="about-content-box ">
-                        <div id="about-content-box-outer ">
-                            <div id="about-content-box-inner ">
-                                <div class="content-title wow animated fadeInDown " data-wow-duration="1s " data-wow-delay=".5s ">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="about-content-box">
+                        <div id="about-content-box-outer">
+                            <div id="about-content-box-inner">
+                                <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                                     <h3>About Vesco</h3>
-                                    <div class="content-title-underline "></div>
+                                    <div class="content-title-underline"></div>
                                 </div>
-                                <div id="about-desc " class="wow animated fadeInDown " data-wow-duration="1s " data-wow-delay=".5s ">
+                                <div id="about-desc" class="wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                                     <p>Cillum reprehenderit enim laborum reprehenderit non ex est laborum proident ut eiusmod sed nulla eu laboris commodo officia nostrud fugiat exercitation eiusmod adipisicing aliqua tempor nulla ut pariatur nostrud deserunt in tempor adipisicing consequat amet dolor fugiat.</p>
                                 </div>
-                                <div id="about-btn " class="wow animated fadeInUp " data-wow-duration="1s " data-wow-delay=".5s ">
-                                    <a class="btn btn-lg btn-general btn-blue " role="button " href="#work " title="View Our Work ">Our Work</a>
+                                <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <a class="btn btn-lg btn-general btn-blue" role="button" href="#work" title="View Our Work">Our Work</a>
                                 </div>
-                            </div>
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -174,67 +174,67 @@
     <!-- Work -->
     <section id="work">
 
-        <div class="content-box ">
-            <div class="content-title wow animated fadeInDown " data-wow-duration="1s " data-wow-delay=".5s ">
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                 <h3>Work</h3>
-                <div class="content-title-underline "></div>
+                <div class="content-title-underline"></div>
             </div>
 
-            <div class="container-fluid ">
-                <div class="row no-gutters wow animated fadeInUp " data-wow-duration="1s " data-wow-delay=".5s ">
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/1.jpg/ ">
-                                <img src="img/work/1.jpg " class="img-responsive " alt="work ">
+            <div class="container-fluid">
+                <div class="row no-gutters wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/1.jpg">
+                                <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/2.jpg/ ">
-                                <img src="img/work/2.jpg " class="img-responsive " alt="work ">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/2.jpg">
+                                <img src="img/work/2.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/3.jpg/ ">
-                                <img src="img/work/3.jpg " class="img-responsive " alt="work ">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/3.jpg">
+                                <img src="img/work/3.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/4.jpg/ ">
-                                <img src="img/work/4.jpg " class="img-responsive " alt="work ">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/4.jpg">
+                                <img src="img/work/4.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/5.jpg/ ">
-                                <img src="img/work/5.jpg " class="img-responsive " alt="work ">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/5.jpg">
+                                <img src="img/work/5.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/6.jpg/ ">
-                                <img src="img/work/6.jpg " class="img-responsive " alt="work ">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/6.jpg">
+                                <img src="img/work/6.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/7.jpg/ ">
-                                <img src="img/work/7.jpg " class="img-responsive " alt="work ">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/7.jpg">
+                                <img src="img/work/7.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 ">
-                        <div class="img-wrapper ">
-                            <a href="img/work/8.jpg/ ">
-                                <img src="img/work/8.jpg " class="img-responsive " alt="work ">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/8.jpg">
+                                <img src="img/work/8.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
@@ -250,15 +250,15 @@
 
 
     <!-- jQuery -->
-    <script src="js/jquery.js "></script>
+    <script src="js/jquery.js"></script>
     <!-- bootstrap javascript -->
-    <script src="js/bootstrap/bootstrap.min.js "></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- WOW JS -->
-    <script src="js/wow/wow.min.js "></script>
+    <script src="js/wow/wow.min.js"></script>
     <!-- Magnific Popup core JS file -->
     <script src="js/magnific-popup/jquery.magnific-popup.min.js "></script>
     <!-- external javascript -->
-    <script src="js/custom.js "></script>
+    <script src="js/custom.js"></script>
 </body>
 
 </html>
