--- a/index.html
+++ b/index.html
@@ -184,56 +184,56 @@
                 <div class="row no-gutters wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/1.jpg">
+                            <a href="img/work/1.jpg" title="insert description">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/2.jpg">
+                            <a href="img/work/2.jpg" title="insert description">
                                 <img src="img/work/2.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/3.jpg">
+                            <a href="img/work/3.jpg" title="insert description">
                                 <img src="img/work/3.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/4.jpg">
+                            <a href="img/work/4.jpg" title="insert description">
                                 <img src="img/work/4.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/5.jpg">
+                            <a href="img/work/5.jpg" title="insert description">
                                 <img src="img/work/5.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/6.jpg">
+                            <a href="img/work/6.jpg" title="insert description">
                                 <img src="img/work/6.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/7.jpg">
+                            <a href="img/work/7.jpg" title="insert description">
                                 <img src="img/work/7.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="img-wrapper">
-                            <a href="img/work/8.jpg">
+                            <a href="img/work/8.jpg" title="insert description">
                                 <img src="img/work/8.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
