--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="css/animate/animate.css">
     <!-- magnific popup core CSS file -->
     <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
+    <!-- owl carousel -->
+    <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
     <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -51,7 +54,7 @@
 
     	<div class="content-box">
 
-    		<div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s"">
+    		<div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
     			<h3>Services</h3>
     			<div class="content-title-underline"></div>
     		</div>
@@ -161,7 +164,7 @@
                                     <p>Cillum reprehenderit enim laborum reprehenderit non ex est laborum proident ut eiusmod sed nulla eu laboris commodo officia nostrud fugiat exercitation eiusmod adipisicing aliqua tempor nulla ut pariatur nostrud deserunt in tempor adipisicing consequat amet dolor fugiat.</p>
                                 </div>
                                 <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a class="btn btn-lg btn-general btn-blue" role="button" href="#work" title="View Our Work">Our Work</a>
+                                    <a class="btn btn-lg btn-general btn-blue" role="button" href="#work">Our Work</a>
                                 </div>
                             </div> 
                         </div>
@@ -243,6 +246,87 @@
         </div>
     </section>
 
+    <!-- Team -->
+    <section id="team">
+
+        <div class="content-box">
+            <div class="content-title wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                <h3>Our Team</h3>
+                <div class="content-title-underline"></div>
+            </div>
+
+            <div class="container">
+                <div class="row wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                    <div class="col-md-12">
+                        <div id="team-members" class="owl-carousel">
+
+                            <div class=team-member>
+                                <img src="img/team/team-1.jpg" class="img-responsive" alt="team-member">
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Matt Bartel</h4>
+                                    <h4 class="team-member-designation">CEO</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-twitter fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>    
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class=team-member>
+                                <img src="img/team/team-2.jpg" class="img-responsive" alt="team-member">
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Ana Costache</h4>
+                                    <h4 class="team-member-designation">Co-Founder</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-twitter fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>  >    
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class=team-member>
+                                <img src="img/team/team-3.jpg" class="img-responsive" alt="team-member">
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Philip Costache</h4>
+                                    <h4 class="team-member-designation">Sr. Developer</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-twitter fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>     
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class=team-member>
+                                <img src="img/team/team-4.jpg" class="img-responsive" alt="team-member">
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Bryan Foley</h4>
+                                    <h4 class="team-member-designation">Sr. Designer</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-twitter fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>      
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class=team-member>
+                                <img src="img/team/team-5.jpg" class="img-responsive" alt="team-member">
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Justin Trudell</h4>
+                                    <h4 class="team-member-designation">Marketing Director</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-twitter fa-2x"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>     
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
@@ -257,6 +341,8 @@
     <script src="js/wow/wow.min.js"></script>
     <!-- Magnific Popup core JS file -->
     <script src="js/magnific-popup/jquery.magnific-popup.min.js "></script>
+    <!-- owl carousel -->
+    <script src="js/owl-carousel/owl.carousel.min.js"></script>
     <!-- external javascript -->
     <script src="js/custom.js"></script>
 </body>
