--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="container">
                 <div class="row wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                     <div class="col-md-12">
-                        <div id="team-members" class="owl-carousel">
+                        <div id="team-members" class="owl-carousel owl-theme">
 
                             <div class=team-member>
                                 <img src="img/team/team-1.jpg" class="img-responsive" alt="team-member">
@@ -280,7 +280,7 @@
                                     <ul class="social-list">
                                         <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
                                         <li><a href="#" class="social-icon icon-gray"><i class="fab fa-twitter fa-2x"></i></a></li>
-                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>  >    
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>   
                                     </ul>
                                 </div>
                             </div>
