working on testimonials section

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     
     <!-- About -->
     <section id="about">
+
         <!-- About right side with diagonal BG parallax -->
         <div id="about-bg-diagonal" class="bg-parallax"></div>
 
@@ -160,7 +161,7 @@
                                     <h3>About Vesco</h3>
                                     <div class="content-title-underline"></div>
                                 </div>
-                                <div id="about-desc" class="wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                                <div id="about-desc" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <p>Cillum reprehenderit enim laborum reprehenderit non ex est laborum proident ut eiusmod sed nulla eu laboris commodo officia nostrud fugiat exercitation eiusmod adipisicing aliqua tempor nulla ut pariatur nostrud deserunt in tempor adipisicing consequat amet dolor fugiat.</p>
                                 </div>
                                 <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
@@ -250,20 +251,21 @@
     <section id="team">
 
         <div class="content-box">
-            <div class="content-title wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                 <h3>Our Team</h3>
                 <div class="content-title-underline"></div>
             </div>
 
             <div class="container">
-                <div class="row wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                     <div class="col-md-12">
+
                         <div id="team-members" class="owl-carousel owl-theme">
 
                             <div class=team-member>
-                                <img src="img/team/team-1.jpg" class="img-responsive" alt="team-member">
+                                <img src="img/team/team-2.jpg" class="img-responsive" alt="team-member">
                                 <div class="team-member-info text-center">
-                                    <h4 class="team-member-name">Matt Bartel</h4>
+                                    <h4 class="team-member-name">Ana Costache</h4>
                                     <h4 class="team-member-designation">CEO</h4>
                                     <ul class="social-list">
                                         <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
@@ -273,9 +275,9 @@
                                 </div>
                             </div>
                             <div class=team-member>
-                                <img src="img/team/team-2.jpg" class="img-responsive" alt="team-member">
+                                <img src="img/team/team-1.jpg" class="img-responsive" alt="team-member">
                                 <div class="team-member-info text-center">
-                                    <h4 class="team-member-name">Ana Costache</h4>
+                                    <h4 class="team-member-name">James Molloy</h4>
                                     <h4 class="team-member-designation">Co-Founder</h4>
                                     <ul class="social-list">
                                         <li><a href="#" class="social-icon icon-gray"><i class="fab fa-facebook-square fa-2x"></i></a></li>
@@ -318,6 +320,58 @@
                                         <li><a href="#" class="social-icon icon-gray"><i class="fab fa-twitter fa-2x"></i></a></li>
                                         <li><a href="#" class="social-icon icon-gray"><i class="fab fa-google-plus fa-2x"></i></a></li>     
                                     </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section id="testimonials">
+
+        <div id="testimonials-cover">
+            
+            <div class="content-box">
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                    <h3>Testimonials</h3>
+                    <div class="content-title-underline"></div>
+                </div>
+
+                <div class="container">
+                    <div class="row wow animated bounceInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                        <div class="col-md-12">
+
+                            <div id="customers-testimonials" class="text-center owl-carousel owl-theme">
+
+                                <div class="testimonial">
+                                    <img src="img/client/client-1.jpg" class="img-responsive img-circle" alt="testimonial">
+                                    <blockquote>
+                                        <p>Cupidatat dolore laboris eu quis dolore consectetur reprehenderit ut reprehenderit ea adipisicing dolor dolore tempor voluptate velit in in occaecat in velit occaecat ad aliquip sint officia aliqua ut nostrud magna nostrud eiusmod consectetur.</p>
+                                    </blockquote>
+                                    <div class="testimonial-author">
+                                        <p><strong>Aryan Khatri</strong><span>Web Developer - Google</span></p>    
+                                    </div>
+                                </div>
+                                <div class="testimonial">
+                                    <img src="img/client/client-2.jpg" class="img-responsive img-circle" alt="testimonial">
+                                    <blockquote>
+                                        <p>Veniam id eu labore ullamco irure eu ullamco cupidatat aliqua sunt officia in elit eiusmod ex id in dolor reprehenderit ea excepteur culpa non ex tempor consequat officia non aliquip dolore ea ut ea.</p>
+                                    </blockquote>
+                                    <div class="testimonial-author">
+                                        <p><strong>Rian Johson</strong><span>Hack Director - Hollywood</span></p>    
+                                    </div>
+                                </div>
+                                <div class="testimonial">
+                                    <img src="img/client/client-3.jpg" class="img-responsive img-circle" alt="testimonial">
+                                    <blockquote>
+                                        <p>Laboris commodo incididunt id tempor duis exercitation in aliquip cupidatat ut aliqua eiusmod et aute consectetur consequat do sint ad sit eiusmod minim excepteur adipisicing nostrud exercitation amet sit incididunt aliquip consectetur magna consequat.</p>
+                                    </blockquote>
+                                    <div class="testimonial-author">
+                                        <p><strong>Sarah Enonima</strong><span>Rocket Scientist - SpaceX</span></p>    
+                                    </div>
                                 </div>
                             </div>
                         </div>
