--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <!-- Testimonials -->
     <section id="testimonials">
 
-        <div id="testimonials-cover">
+        <div id="testimonials-cover" class="bg-parallax">
             
             <div class="content-box">
                 <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
@@ -348,7 +348,7 @@
 
                                 <div class="testimonial">
                                     <img src="img/client/client-1.jpg" class="img-responsive img-circle" alt="testimonial">
-                                    <blockquote>
+                                    <blockquote class="text-center">
                                         <p>Cupidatat dolore laboris eu quis dolore consectetur reprehenderit ut reprehenderit ea adipisicing dolor dolore tempor voluptate velit in in occaecat in velit occaecat ad aliquip sint officia aliqua ut nostrud magna nostrud eiusmod consectetur.</p>
                                     </blockquote>
                                     <div class="testimonial-author">
@@ -357,7 +357,7 @@
                                 </div>
                                 <div class="testimonial">
                                     <img src="img/client/client-2.jpg" class="img-responsive img-circle" alt="testimonial">
-                                    <blockquote>
+                                    <blockquote class="text-center">
                                         <p>Veniam id eu labore ullamco irure eu ullamco cupidatat aliqua sunt officia in elit eiusmod ex id in dolor reprehenderit ea excepteur culpa non ex tempor consequat officia non aliquip dolore ea ut ea.</p>
                                     </blockquote>
                                     <div class="testimonial-author">
@@ -366,7 +366,7 @@
                                 </div>
                                 <div class="testimonial">
                                     <img src="img/client/client-3.jpg" class="img-responsive img-circle" alt="testimonial">
-                                    <blockquote>
+                                    <blockquote class="text-center">
                                         <p>Laboris commodo incididunt id tempor duis exercitation in aliquip cupidatat ut aliqua eiusmod et aute consectetur consequat do sint ad sit eiusmod minim excepteur adipisicing nostrud exercitation amet sit incididunt aliquip consectetur magna consequat.</p>
                                     </blockquote>
                                     <div class="testimonial-author">
