--- a/index.html
+++ b/index.html
@@ -381,6 +381,94 @@
         </div>
     </section>
 
+    <!-- Pricing -->
+    <section id="pricing">
+
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                <h3>Our Prices</h3>
+                <div class="content-title-underline"></div>
+            </div>
+
+            <div class="container">
+                <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+
+                    <div class="col-md-4 wow animated zoomIn" data-wow-duration="1s" data-wow-delay=".5s">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Basic</h4>
+                            <h3 class="pricing-value"><sup>$</sup>49</h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>500 EMAILS</p>
+                                </li>
+                                <li>
+                                    <p>5GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>5GB Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED DOMAINS</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Purchase</a>
+                            </div>    
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 wow animated bounceInUp" data-wow-duration="1s" data-wow-delay=".5s"">
+                        <div class="pricing-box pricing-box-lg text-center">
+                            <h4 class="pricing-title">Enterprise</h4>
+                            <h3 class="pricing-value"><sup>$</sup>199</h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>UNLIMITED EMAILS</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED DOMAINS</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-white" href="#" role="button">Purchase</a>
+                            </div>    
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 wow animated zoomIn" data-wow-duration="1s" data-wow-delay=".5s"">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Standard</h4>
+                            <h3 class="pricing-value"><sup>$</sup>69</h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>500 EMAILS</p>
+                                </li>
+                                <li>
+                                    <p>5GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>5GB Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED DOMAINS</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Purchase</a>
+                            </div>    
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
