--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     		<div class="container">
     			<div class="row">
+
     				<div class="col-md-4">
     					<div class="service-item">
     						<div class="service-item-icon">
@@ -154,6 +155,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
+
                     <div id="about-content-box">
                         <div id="about-content-box-outer">
                             <div id="about-content-box-inner">
@@ -186,6 +188,7 @@
 
             <div class="container-fluid">
                 <div class="row no-gutters wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+
                     <div class="col-md-3">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="insert description">
@@ -355,6 +358,7 @@
                                         <p><strong>Aryan Khatri</strong><span>Web Developer - Google</span></p>    
                                     </div>
                                 </div>
+
                                 <div class="testimonial">
                                     <img src="img/client/client-2.jpg" class="img-responsive img-circle" alt="testimonial">
                                     <blockquote class="text-center">
@@ -391,7 +395,7 @@
             </div>
 
             <div class="container">
-                <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                <div class="row">
 
                     <div class="col-md-4 wow animated zoomIn" data-wow-duration="1s" data-wow-delay=".5s">
                         <div class="pricing-box text-center">
@@ -469,6 +473,54 @@
         </div>
     </section>
 
+    <!-- Stats -->
+    <section id="stats">
+
+        <div id="stats-cover" class="bg-parallax">
+
+            <div class="content-box">
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                    <h3>We Never Stop Improving</h3>
+                    <div class="content-title-underline"></div>
+                </div>
+
+                <div class="container">
+                    <div class="row text-center wow animated bounceInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fas fa-cloud-download-alt fa-5x"></i>
+                                <h2><span class="counter">1590</span><span>+</span></h2>
+                                <p>Downloads</p> 
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fas fa-star fa-5x"></i>
+                                <h2><span class="counter">1590</span><span>+</span></h2>
+                                <p>Awards</p> 
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fas fa-heart fa-5x"></i>
+                                <h2><span class="counter">1590</span><span>+</span></h2>
+                                <p>Likes</p> 
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fas fa-check fa-5x"></i>
+                                <h2><span class="counter">1590</span><span>+</span></h2>
+                                <p>Recommendations</p> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    
+    </section>
+
 
 
 
@@ -485,6 +537,9 @@
     <script src="js/magnific-popup/jquery.magnific-popup.min.js "></script>
     <!-- owl carousel -->
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
+    <!-- counter (IMPORTANT: SEQUENCE MATTERS) -->
+    <script src="js/counter/jquery.waypoints.min.js"></script>
+    <script src="js/counter/jquery.counterup.min.js"></script>
     <!-- external javascript -->
     <script src="js/custom.js"></script>
 </body>
