finished contact section

--- a/index.html
+++ b/index.html
@@ -567,6 +567,62 @@
         </div>
     </section>
 
+    <footer>
+        
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-6">
+
+                        <div id="contact-left">
+                            <h3>VESCO</h3>
+                            <p>We believe in <strong>Simple</strong>,<strong>Clean</strong>&<strong>Modern</strong>Design Standards with Responsive Approach.</p>
+                            <div id="contact-info">
+                                <address>
+                                    <strong>Headquarters:</strong><br>
+                                    <p>221 Nowhere Now, Bldg 1<br>
+                                    Runaroundtown, XY 75309</p>
+                                </address>
+                                <div id="phone-fax-email">
+                                    <p>
+                                        <strong>Phone: </strong><span>(01) 876-0010</span><br>
+                                        <strong>Fax: </strong><span>(01) 768-1101</span><br>
+                                        <strong>Email: </strong><span>vesco@etr.com</span><br>
+                                    </p>    
+                                </div>
+                            </div>
+                        </div>
+                        <ul class="social-list">
+                            <li><a href="#" class="social-icon icon-white"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                            <li><a href="#" class="social-icon icon-white"><i class="fab fa-twitter fa-2x"></i></a></li>
+                            <li><a href="#" class="social-icon icon-white"><i class="fab fa-youtube fa-2x"></i></a></li> 
+                            <li><a href="#" class="social-icon icon-white"><i class="fab fa-google-plus fa-2x"></i></a></li>    
+                        </ul>
+                    </div>
+
+                    <div class="col-md-6">
+                        <h3>Contact Us</h3>
+                        <form action="#">
+                            <input type="text" name="full-name" placeholder="Full Name" class="form-control">
+                            <input type="text" name="email" placeholder="email address" class="form-control">
+                            <textarea rows="5" name="message" placeholder="Message..." class="form-control"></textarea>
+
+                            <div id="send-btn">
+                                <a class="btn btn-lg btn-general btn-white" role="button" href="#">Send</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+    </footer>
+
+
+
 
 
 
