--- a/index.html
+++ b/index.html
@@ -567,6 +567,7 @@
         </div>
     </section>
 
+    <!-- Contact and Footer-Bottom -->
     <footer>
         
         <div id="contact">
@@ -577,7 +578,7 @@
 
                         <div id="contact-left">
                             <h3>VESCO</h3>
-                            <p>We believe in <strong>Simple</strong>,<strong>Clean</strong>&<strong>Modern</strong>Design Standards with Responsive Approach.</p>
+                            <p>We believe in <strong>Simple</strong>, <strong>Clean</strong> & <strong>Modern</strong> Design Standards with Responsive Approach.</p>
                             <div id="contact-info">
                                 <address>
                                     <strong>Headquarters:</strong><br>
@@ -615,11 +616,39 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div id="footer-bottom">
+
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <div id="footer-copyrights">
+                            <p>Copyrights &copy; 2017 All Rights Reserved by Vesco Inc.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div id="footer-menu">
+                            <ul>
+                                <li><a href="#home">Home</a>/</li>
+                                <li><a href="#services">Services</a>/</li>
+                                <li><a href="#work">Work</a>/</li>
+                                <li><a href="#team">Team</a>/</li>
+                                <li><a href="#testimonials">Testimonials</a>/</li>
+                                <li><a href="#pricing">Pricing</a>/</li>
+                                <li><a href="#stats">Stats</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
     </footer>
+        
 
 
 
