--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="95">
+
     <!-- Nav -->
     <header>
 
-        <nav class="navbar vesco-top-nav navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-fixed-top" role="navigation">
 
             <div class="container-fluid">
                 
@@ -65,7 +66,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div>    
         </nav>
     </header>
 
