--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="95">
+<body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="85">
 
     <!-- Nav -->
     <header>
@@ -53,16 +53,16 @@
 
                     <div id="vesco-menu" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#work">Work</a></li>
-                            <li><a href="#team">Team</a></li>
-                            <li><a href="#testimonials">Testimonials</a></li>
-                            <li><a href="#pricing">Pricing</a></li>
-                            <li><a href="#stats">Stats</a></li>
-                            <li><a href="#clients">Clients</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a class="smooth-scroll" href="#home">Home</a></li>
+                            <li><a class="smooth-scroll" href="#services">Services</a></li>
+                            <li><a class="smooth-scroll" href="#about">About</a></li>
+                            <li><a class="smooth-scroll" href="#work">Work</a></li>
+                            <li><a class="smooth-scroll" href="#team">Team</a></li>
+                            <li><a class="smooth-scroll" href="#testimonials">Testimonials</a></li>
+                            <li><a class="smooth-scroll" href="#pricing">Pricing</a></li>
+                            <li><a class="smooth-scroll" href="#stats">Stats</a></li>
+                            <li><a class="smooth-scroll" href="#clients">Clients</a></li>
+                            <li><a class="smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     </div>
 
                     <div id="home-btn" class="animated zoomIn">
-                        <a class="btn btn-lg btn-general btn-white" role="button" href="#work">View Our Work</a>
+                        <a class="smooth-scroll btn btn-lg btn-general btn-white" role="button" href="#work">View Our Work</a>
                     </div>
                 </div>
             </div>
@@ -674,19 +674,23 @@
                     <div class="col-md-6">
                         <div id="footer-menu">
                             <ul>
-                                <li><a href="#home">Home</a>/</li>
-                                <li><a href="#services">Services</a>/</li>
-                                <li><a href="#work">Work</a>/</li>
-                                <li><a href="#team">Team</a>/</li>
-                                <li><a href="#testimonials">Testimonials</a>/</li>
-                                <li><a href="#pricing">Pricing</a>/</li>
-                                <li><a href="#stats">Stats</a></li>
+                                <li><a class="smooth-scroll" href="#home">Home</a>/</li>
+                                <li><a class="smooth-scroll" href="#services">Services</a>/</li>
+                                <li><a class="smooth-scroll" href="#work">Work</a>/</li>
+                                <li><a class="smooth-scroll" href="#team">Team</a>/</li>
+                                <li><a class="smooth-scroll" href="#testimonials">Testimonials</a>/</li>
+                                <li><a class="smooth-scroll" href="#pricing">Pricing</a>/</li>
+                                <li><a class="smooth-scroll" href="#stats">Stats</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll" role="button" title="home">
+            <i class="fas fa-angle-up"></i>
+        </a>
     </footer>
         
 
@@ -711,6 +715,8 @@
     <!-- counter (IMPORTANT: SEQUENCE MATTERS) -->
     <script src="js/counter/jquery.waypoints.min.js"></script>
     <script src="js/counter/jquery.counterup.min.js"></script>
+    <!-- easing -->
+    <script src="js/easing/jquery.easing.1.3.js"></script>
     <!-- external javascript -->
     <script src="js/custom.js"></script>
 </body>
