--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
     <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
-<body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="85">
+<body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="75">
 
     <!-- Nav -->
     <header>
