--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     		<div class="container">
     			<div class="row">
 
-    				<div class="col-md-4">
+    				<div class="col-md-4 col-sm-6">
     					<div class="service-item">
     						<div class="service-item-icon">
     							<i class="fas fa-paint-brush fa-3x"></i>
@@ -119,7 +119,7 @@
     						</div>
     					</div>
     				</div>
-    				<div class="col-md-4">
+    				<div class="col-md-4 col-sm-6">
     					<div class="service-item">
     						<div class="service-item-icon">
     							<i class="fas fa-laptop fa-3x"></i>
@@ -132,7 +132,7 @@
     						</div>
     					</div>
     				</div>	
-    				<div class="col-md-4">
+    				<div class="col-md-4 col-sm-6">
     					<div class="service-item">
     						<div class="service-item-icon">
     							<i class="fas fa-tablet fa-3x"></i>
@@ -145,7 +145,7 @@
     						</div>
     					</div>
     				</div>
-    				<div class="col-md-4">
+    				<div class="col-md-4 col-sm-6">
     					<div class="service-item">
     						<div class="service-item-icon">
     							<i class="fas fa-search fa-3x"></i>
@@ -158,7 +158,7 @@
     						</div>
     					</div>
     				</div>
-    				<div class="col-md-4">
+    				<div class="col-md-4 col-sm-6">
     					<div class="service-item">
     						<div class="service-item-icon">
     							<i class="far fa-edit fa-3x"></i>
@@ -171,7 +171,7 @@
     						</div>
     					</div>
     				</div>	
-    				<div class="col-md-4">
+    				<div class="col-md-4 col-sm-6">
     					<div class="service-item">
     						<div class="service-item-icon">
     							<i class="far fa-life-ring fa-3x"></i>
@@ -233,56 +233,56 @@
             <div class="container-fluid">
                 <div class="row no-gutters wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="insert description">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/2.jpg" title="insert description">
                                 <img src="img/work/2.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/3.jpg" title="insert description">
                                 <img src="img/work/3.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/4.jpg" title="insert description">
                                 <img src="img/work/4.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/5.jpg" title="insert description">
                                 <img src="img/work/5.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/6.jpg" title="insert description">
                                 <img src="img/work/6.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/7.jpg" title="insert description">
                                 <img src="img/work/7.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/8.jpg" title="insert description">
                                 <img src="img/work/8.jpg" class="img-responsive" alt="work">
@@ -531,28 +531,28 @@
                 <div class="container">
                     <div class="row text-center wow animated bounceInLeft" data-wow-duration="1s" data-wow-delay=".5s">
 
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fas fa-cloud-download-alt fa-5x"></i>
                                 <h2><span class="counter">1590</span><span>+</span></h2>
                                 <p>Downloads</p> 
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fas fa-star fa-5x"></i>
                                 <h2><span class="counter">1590</span><span>+</span></h2>
                                 <p>Awards</p> 
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fas fa-heart fa-5x"></i>
                                 <h2><span class="counter">1590</span><span>+</span></h2>
                                 <p>Likes</p> 
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fas fa-check fa-5x"></i>
                                 <h2><span class="counter">1590</span><span>+</span></h2>
@@ -674,7 +674,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        <div id="footer-menu">
+                        <div id="footer-menu" class="hidden-sm">
                             <ul>
                                 <li><a class="smooth-scroll" href="#home">Home</a>/</li>
                                 <li><a class="smooth-scroll" href="#services">Services</a>/</li>
