web-site working at 100%

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        <div id="footer-menu" class="hidden-sm">
+                        <div id="footer-menu" class="hidden-sm hidden-xs">
                             <ul>
                                 <li><a class="smooth-scroll" href="#home">Home</a>/</li>
                                 <li><a class="smooth-scroll" href="#services">Services</a>/</li>
