made some superficial changes to brand name

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Vesco</title>
+    <title>Tetra</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon2.ico">
     <!-- unicode character encoding  -->
     <meta charset="utf-8">
     <!-- microsoft edge compatible -->
@@ -54,7 +54,14 @@
                         </button>
                         
                         <a class="navbar-brand" href="#home">
-                            <img src="img/logo.png">
+                            <h3>
+                                <span id="color-one">T</span>
+                                <span id="color-two">E</span>
+                                <span id="color-three">T</span>
+                                <span id="color-four">R</span>
+                                <span id="color-five">A</span>
+                            </h3>
+
                         </a>
                     </div>
 
@@ -87,11 +94,11 @@
                 <div id="home-content-box-inner">
 
                     <div id="home-heading" class="animated zoomIn">
-                    	<h3>Watch Out<br>The Modern Responsive Website!</h3>
+                    	<h3>A Modern Responsive Website!</h3>
                     </div>
 
                     <div id="home-btn" class="animated zoomIn">
-                        <a class="smooth-scroll btn btn-lg btn-general btn-white" role="button" href="#work">View Our Work</a>
+                        <a class="btn btn-lg btn-general btn-white smooth-scroll" role="button" href="#work">View Our Work</a>
                     </div>
                 </div>
             </div>
@@ -124,6 +131,7 @@
     						</div>
     					</div>
     				</div>
+
     				<div class="col-md-4 col-sm-6">
     					<div class="service-item wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
     						<div class="service-item-icon">
@@ -197,10 +205,10 @@
     <!-- About -->
     <section id="about">
 
-        <!-- About right side with diagonal BG parallax -->
+        <!-- About right side, with diagonal BG parallax -->
         <div id="about-bg-diagonal" class="bg-parallax"></div>
 
-        <!-- About left side with content -->
+        <!-- About left side, with content -->
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -674,7 +682,7 @@
 
                     <div class="col-md-6">
                         <div id="footer-copyrights">
-                            <p>Copyrights &copy; 2017 All Rights Reserved by Vesco Inc.</p>
+                            <p>Copyrights &copy; 2018 All Rights Reserved by Tetra</p>
                         </div>
                     </div>
 
