css and js changes to brand-name

--- a/index.html
+++ b/index.html
@@ -54,14 +54,7 @@
                         </button>
                         
                         <a class="navbar-brand" href="#home">
-                            <h3>
-                                <span id="color-one">T</span>
-                                <span id="color-two">E</span>
-                                <span id="color-three">T</span>
-                                <span id="color-four">R</span>
-                                <span id="color-five">A</span>
-                            </h3>
-
+                            <h3 class="brand-name">Tetra</h3>
                         </a>
                     </div>
 
