css, jquery changes to brand-name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Tetra</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/favicon2.ico">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- unicode character encoding  -->
     <meta charset="utf-8">
     <!-- microsoft edge compatible -->
