--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <div id="about-content-box-outer">
                             <div id="about-content-box-inner">
                                 <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <h3>About Tetra</h3>
+                                    <h3>About Vesco</h3>
                                     <div class="content-title-underline"></div>
                                 </div>
                                 <div id="about-desc" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
