--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                                     <p>
                                         <strong>Phone: </strong><span>(01) 876-0010</span><br>
                                         <strong>Fax: </strong><span>(01) 768-1101</span><br>
-                                        <strong>Email: </strong><span>vesco@etr.com</span><br>
+                                        <strong>Email: </strong><span>tetra@etr.com</span><br>
                                     </p>    
                                 </div>
                             </div>
