no more changes!

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                     <div class="col-md-6">
 
                         <div id="contact-left">
-                            <h3>VESCO</h3>
+                            <h3>TETRA</h3>
                             <p>We believe in <strong>Simple</strong>, <strong>Clean</strong> & <strong>Modern</strong> Design Standards with Responsive Approach.</p>
                             <div id="contact-info">
                                 <address>
